# TinVisualiser

./: .gitignore  CMakeLists.txt
Src/: CMakeLists.txt  MainWindow.cpp  MainWindow.hpp  MainWindow.ui  TinData.cpp  TinData.hpp  TinDataLoader.cpp  TinDataLoader.hpp  TinDataSaver.cpp  TinDataSaver.hpp  TinVisualiser.cpp  ZoomingGraphicsView.cpp  ZoomingGraphicsView.hpp
Src/Translations/: TinVisualiser_cs_CZ.ts
